# c-entity-framework

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  message.c  message.h  tile_map.c  tile_map.h
src/component/: keyboard_input_component.c  position_component.c  sprite_component.c
src/framework/: component.c  component.h  component_manager.c  component_manager.h  entity.h  entity.h.autosave  entity_manager.c  entity_manager.h  game_system.c  game_system.h  world.c  world.h
src/os/linux/: main.c
src/render/: renderer.c  renderer.h
src/resource/: resource_manager.c  resource_manager.h
src/system/: keyboard_input_system.c  render_system.c
src/util/: bitset.c  bitset.h  intrusive_linked_list.c  intrusive_linked_list.h
